# layout-contiguous

./: .clang-format  AUTHORS  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: LayoutContiguousConfig.cmake.in  layout_contiguous-config.cmake.in
src/layout_contiguous/: layout_contiguous.hpp  mapping_contiguous.hpp
tests/: CMakeLists.txt  test_layout_contiguous_at_left.cpp  test_layout_contiguous_at_right.cpp  test_submdspan.cpp  test_vectorization.cpp
